# price-checker

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py  router.py  search.py
backend/app/auth/: __init__.py  jwt.py  kakao.py  models.py  naver.py  router.py  schemas.py  service.py
backend/app/collectors/: __init__.py  base.py  circuit_breaker.py  coupang.py  coupang_detail.py  http_client.py  naver.py  naver_detail.py  playwright_runner.py  rate_limiter.py  remote_scraper.py  selectors.yaml  selectors_loader.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  redis.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_pivot_multi_tenant.py  002_notification_domain.py  (+1 more)
backend/app/models/: __init__.py  base.py  listing.py  option_cache.py
backend/app/notifications/: __init__.py  dispatcher.py  models.py  policy.py  providers.py  router.py  schemas.py  service.py
backend/app/parsers/: __init__.py  llm_parser.py  option_parser.py  regex_parser.py  unit_dictionary.py  unit_price.py
backend/app/price_collection/: __init__.py  client.py  exceptions.py  models.py  normalization.py  router.py  schemas.py  service.py
backend/app/procurement/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/schemas/: __init__.py  search.py
backend/app/services/: __init__.py  cache_service.py  detail_cache_service.py  quota_service.py  ranking_service.py  search_service.py  shipping_policy.py
backend/app/tenancy/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/ui/: __init__.py  streamlit_app.py
backend/tests/: conftest.py
backend/tests/test_auth/: test_auth_service.py  test_jwt.py  test_kakao.py  test_naver.py  test_refresh_rotation.py
backend/tests/test_collectors/: test_rate_limiter.py
backend/tests/test_notifications/: test_consents.py  test_models.py  test_procurement_integration.py  test_providers.py  test_recipients.py  test_scaffolding.py  test_templates.py
backend/tests/test_parsers/: test_regex_parser.py  test_unit_price.py
backend/tests/test_procurement/: test_collection_api.py  test_collection_config.py  test_collection_execution.py  test_collection_persistence.py  test_collection_retry.py  test_naver_client.py  test_naver_normalization.py  test_orders.py  test_quota.py  test_results.py
backend/tests/test_services/: test_cache_service.py  test_quota_service.py  test_ranking_service.py  test_search_service.py  test_shipping_policy.py
backend/tests/test_tenancy/: test_dependencies.py  test_isolation.py  test_models.py  test_router.py  test_service.py
infra/: docker-compose.yml  (+1 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs  marketplace.rs
(+171 files in other folders)
