[project]
name = "lowest-price-backend"
version = "0.1.0"
description = "친구용 비공개 네이버/쿠팡 최저가 비교 백엔드 서비스"
authors = [{ name = "kim.hyung.joo", email = "kim.hyung.joo@drbworld.com" }]
requires-python = ">=3.12"
readme = "../README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[http2]>=0.27.0",
    "selectolax>=0.3.21",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.13.0",
    "pyyaml>=6.0.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "vcrpy>=6.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
ui = [
    "streamlit>=1.37.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "*/db/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
