[package]
name = "lowest-price-tauri"
version = "0.1.0"
description = "lowest-price B2B procurement desktop UI"
authors = ["kim.hyung.joo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lowest_price_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
