[package]
name = "lowest-price-tauri"
version = "0.1.0"
description = "lowest-price B2B procurement desktop UI"
authors = ["kim.hyung.joo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lowest_price_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["time"] }
urlencoding = "2"
